--- a/index.ipynb
+++ b/index.ipynb
@@ -36,7 +36,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Load required libraries\n"
+    "# Load required libraries\n",
+    "import pandas as pd\n"
    ]
   },
   {
@@ -362,7 +363,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.4"
+   "version": "3.6.6"
   }
  },
  "nbformat": 4,
