Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -37,7 +37,8 @@
    "outputs": [],
    "source": [
     "# Load required libraries\n",
-    "import pandas as pd\n"
+    "import pandas as pd\n",
+    "import"
    ]
   },
   {
