--- a/index.ipynb
+++ b/index.ipynb
@@ -38,7 +38,7 @@
    "source": [
     "# Load required libraries\n",
     "import pandas as pd\n",
-    "import"
+    "import datetime"
    ]
   },
   {
@@ -47,7 +47,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Load the data from min_temp.csv and check the index\n"
+    "# Load the data from min_temp.csv and check the index\n",
+    "df = "
    ]
   },
   {
