--- a/index.ipynb
+++ b/index.ipynb
@@ -48,7 +48,7 @@
    "outputs": [],
    "source": [
     "# Load the data from min_temp.csv and check the index\n",
-    "df = "
+    "df = pd.read_csv()"
    ]
   },
   {
