--- a/index.ipynb
+++ b/index.ipynb
@@ -60,10 +60,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'pandas.core.frame.DataFrame'>\n",
+      "RangeIndex: 3650 entries, 0 to 3649\n",
+      "Data columns (total 2 columns):\n",
+      "Date         3650 non-null object\n",
+      "Daily_min    3650 non-null float64\n",
+      "dtypes: float64(1), object(1)\n",
+      "memory usage: 57.1+ KB\n"
+     ]
+    }
+   ],
+   "source": [
+    "df.info()"
+   ]
   },
   {
    "cell_type": "markdown",
