Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -32,13 +32,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Load required libraries\n",
     "import pandas as pd\n",
-    "import datetime"
+    "import datetime\n",
+    "import matplotlib.pyplot as plt"
    ]
   },
   {
