Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -49,7 +49,7 @@
    "outputs": [],
    "source": [
     "# Load the data from min_temp.csv and check the index\n",
-    "df = pd.read_csv('min_temp.csv')"
+    "temp_data = pd.read_csv('min_temp.csv')"
    ]
   },
   {
@@ -79,7 +79,7 @@
     }
    ],
    "source": [
-    "df.info()"
+    "temp_data.info()"
    ]
   },
   {
