Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -88,7 +88,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "temp_data['Date'] = pd.to_datetime(temp_data['Date'], format='%d%m')"
+    "temp_data['Date'] = pd.to_datetime(temp_data['Date'], format='%d/%m/%y')\n",
+    "\n"
    ]
   },
   {
