Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -89,7 +89,7 @@
    "outputs": [],
    "source": [
     "temp_data['Date'] = pd.to_datetime(temp_data['Date'], format='%d/%m/%y')\n",
-    "\n"
+    "temp_data.set_ind\n"
    ]
   },
   {
