Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -90,7 +90,7 @@
    "source": [
     "temp_data['Date'] = pd.to_datetime(temp_data['Date'], format='%d/%m/%y')\n",
     "temp_data.set_index('Date', inplace=True)\n",
-    "\n"
+    "temp_data.drop('Date', in)\n"
    ]
   },
   {
