--- a/index.ipynb
+++ b/index.ipynb
@@ -105,8 +105,7 @@
    ],
    "source": [
     "temp_data['Date'] = pd.to_datetime(temp_data['Date'], format='%d/%m/%y')\n",
-    "temp_data.set_index('Date', inplace=True)\n",
-    "temp_data.drop('Date', axis=1)\n"
+    "temp_data.set_index('Date', inplace=True)\n"
    ]
   },
   {
