Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -165,7 +165,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "temp_data.index = pd.to_datetime"
+    "temp_data.index."
    ]
   },
   {
