--- a/index.ipynb
+++ b/index.ipynb
@@ -161,11 +161,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "DatetimeIndex(['1981-01-01', '1981-01-02', '1981-01-03', '1981-01-04',\n",
+       "               '1981-01-05', '1981-01-06', '1981-01-07', '1981-01-08',\n",
+       "               '1981-01-09', '1981-01-10',\n",
+       "               ...\n",
+       "               '1990-12-22', '1990-12-23', '1990-12-24', '1990-12-25',\n",
+       "               '1990-12-26', '1990-12-27', '1990-12-28', '1990-12-29',\n",
+       "               '1990-12-30', '1990-12-31'],\n",
+       "              dtype='datetime64[ns]', name='Date', length=3650, freq=None)"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "temp_data.index."
+    "temp_data.index"
    ]
   },
   {
