Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -84,83 +84,6 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>Daily_min</th>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>Date</th>\n",
-       "      <th></th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>1981-01-01</th>\n",
-       "      <td>20.7</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1981-01-02</th>\n",
-       "      <td>17.9</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1981-01-03</th>\n",
-       "      <td>18.8</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1981-01-04</th>\n",
-       "      <td>14.6</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1981-01-05</th>\n",
-       "      <td>15.8</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "            Daily_min\n",
-       "Date                 \n",
-       "1981-01-01       20.7\n",
-       "1981-01-02       17.9\n",
-       "1981-01-03       18.8\n",
-       "1981-01-04       14.6\n",
-       "1981-01-05       15.8"
-      ]
-     },
-     "execution_count": 11,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "temp_data.head()"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 13,
    "metadata": {},
    "outputs": [
@@ -183,7 +106,7 @@
     }
    ],
    "source": [
-    "temp_data"
+    "temp_data.ste"
    ]
   },
   {
