--- a/index.ipynb
+++ b/index.ipynb
@@ -106,7 +106,7 @@
     }
    ],
    "source": [
-    "temp_data.Date = pd.to"
+    "temp_data.Date = pd.to_datetime(temp_data.Date, f)"
    ]
   },
   {
