Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -106,7 +106,8 @@
     }
    ],
    "source": [
-    "temp_data.Date = pd.to_datetime(temp_data.Date, format='%d/%m/')"
+    "temp_data.Date = pd.to_datetime(temp_data.Date, format='%d/%m/%y')\n",
+    "temp_data"
    ]
   },
   {
