--- a/index.ipynb
+++ b/index.ipynb
@@ -44,7 +44,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -61,7 +61,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -69,17 +69,25 @@
      "output_type": "stream",
      "text": [
       "<class 'pandas.core.frame.DataFrame'>\n",
-      "DatetimeIndex: 3650 entries, 1981-01-01 to 1990-12-31\n",
-      "Data columns (total 1 columns):\n",
+      "RangeIndex: 3650 entries, 0 to 3649\n",
+      "Data columns (total 2 columns):\n",
+      "Date         3650 non-null object\n",
       "Daily_min    3650 non-null float64\n",
-      "dtypes: float64(1)\n",
-      "memory usage: 57.0 KB\n"
+      "dtypes: float64(1), object(1)\n",
+      "memory usage: 57.1+ KB\n"
      ]
     }
    ],
    "source": [
     "temp_data.info()"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "markdown",
