Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -87,7 +87,9 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "temp_data['Date']"
+   ]
   },
   {
    "cell_type": "markdown",
