--- a/index.ipynb
+++ b/index.ipynb
@@ -88,7 +88,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "temp_data['Date'] pd.to_date"
+    "temp_data['Date'] pd.to_datetime(temp_data['Date'], )"
    ]
   },
   {
