--- a/index.ipynb
+++ b/index.ipynb
@@ -88,7 +88,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "temp_data['Date'] pd.to_datetime(temp_data['Date'], )"
+    "temp_data['Date'] pd.to_datetime(temp_data['Date'],\n",
+    "                                 format='')"
    ]
   },
   {
