--- a/index.ipynb
+++ b/index.ipynb
@@ -89,7 +89,8 @@
    "outputs": [],
    "source": [
     "temp_data['Date'] pd.to_datetime(temp_data['Date'],\n",
-    "                                 format='%d/%m/%y')"
+    "                                 format='%d/%m/%y')\n",
+    "temp_data.set_index"
    ]
   },
   {
