--- a/index.ipynb
+++ b/index.ipynb
@@ -84,13 +84,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 19,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "SyntaxError",
+     "evalue": "invalid syntax (<ipython-input-19-4eaf342088ec>, line 1)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-19-4eaf342088ec>\"\u001b[0;36m, line \u001b[0;32m1\u001b[0m\n\u001b[0;31m    temp_data['Date'] pd.to_datetime(temp_data['Date'],\u001b[0m\n\u001b[0m                       ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax\n"
+     ]
+    }
+   ],
    "source": [
     "temp_data['Date'] pd.to_datetime(temp_data['Date'],\n",
     "                                 format='%d/%m/%y')\n",
-    "temp_data.set_index"
+    "temp_data.set_index('Date', inplace=True)"
    ]
   },
   {
