--- a/index.ipynb
+++ b/index.ipynb
@@ -102,11 +102,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 21,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'pandas.core.frame.DataFrame'>\n",
+      "DatetimeIndex: 3650 entries, 1981-01-01 to 1990-12-31\n",
+      "Data columns (total 1 columns):\n",
+      "Daily_min    3650 non-null float64\n",
+      "dtypes: float64(1)\n",
+      "memory usage: 57.0 KB\n"
+     ]
+    }
+   ],
    "source": [
-    "temp_data.info"
+    "temp_data.info()"
    ]
   },
   {
