Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -137,7 +137,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Draw a line plot using temp_data \n"
+    "# Draw a line plot using temp_data \n",
+    "temp_data."
    ]
   },
   {
