Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -161,7 +161,7 @@
    ],
    "source": [
     "# Draw a line plot using temp_data \n",
-    "fig, ax = \n",
+    "fig, ax = subplots()\n",
     "temp_data.plot();"
    ]
   },
