Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -161,8 +161,8 @@
    ],
    "source": [
     "# Draw a line plot using temp_data \n",
-    "fig, ax = subplots()\n",
-    "temp_data.plot();"
+    "fig, ax = subplots(figsize=)\n",
+    "ax = temp_data.plot();"
    ]
   },
   {
