Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -149,9 +149,7 @@
     }
    ],
    "source": [
-    "# Draw a line plot using temp_data \n",
-    "fig, axs = subplots(figsize=(10, 8))\n",
-    "ax = temp_data.plot();"
+    "# Draw a line plot using temp_data temp_data.plot();"
    ]
   },
   {
