Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -149,7 +149,8 @@
     }
    ],
    "source": [
-    "# Draw a line plot using temp_data temp_data.plot();"
+    "# Draw a line plot using temp_data \n",
+    "temp_data.plot(figsize=());"
    ]
   },
   {
