Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -170,7 +170,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Use dots instead on a continuous line and redraw the timeseries. \n"
+    "# Use dots instead on a continuous line and redraw the timeseries. \n",
+    "\n"
    ]
   },
   {
