Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -171,7 +171,7 @@
    "outputs": [],
    "source": [
     "# Use dots instead on a continuous line and redraw the timeseries. \n",
-    "\n"
+    "temp_data.plot(figsize=)\n"
    ]
   },
   {
