Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -171,7 +171,8 @@
    "outputs": [],
    "source": [
     "# Use dots instead on a continuous line and redraw the timeseries. \n",
-    "temp_data.plot(figsize=)\n"
+    "temp_data.plot(figsize=(22, 8), style='b.')\n",
+    "p\n"
    ]
   },
   {
