--- a/index.ipynb
+++ b/index.ipynb
@@ -209,7 +209,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Use pandas grouper to group values using annual frequency\n"
+    "# Use pandas grouper to group values using annual frequency\n",
+    "\n",
+    "\n"
    ]
   },
   {
