--- a/index.ipynb
+++ b/index.ipynb
@@ -210,7 +210,7 @@
    "outputs": [],
    "source": [
     "# Use pandas grouper to group values using annual frequency\n",
-    "year\n",
+    "years_\n",
     "\n"
    ]
   },
