Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -210,7 +210,7 @@
    "outputs": [],
    "source": [
     "# Use pandas grouper to group values using annual frequency\n",
-    "year_temps = temp_data.groupby\n",
+    "year_temps = temp_data.groupby(pd.Grouper(freq='A'))\n",
     "\n"
    ]
   },
