--- a/index.ipynb
+++ b/index.ipynb
@@ -205,7 +205,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -220,7 +220,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#Create a new DataFrame and store yearly values in columns \n"
+    "#Create a new DataFrame and store yearly values in columns \n",
+    "annual_\n"
    ]
   },
   {
