Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -221,7 +221,7 @@
    "outputs": [],
    "source": [
     "#Create a new DataFrame and store yearly values in columns \n",
-    "annual_\n"
+    "annual_temp = pd.Data\n"
    ]
   },
   {
