Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -216,12 +216,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [],
    "source": [
     "#Create a new DataFrame and store yearly values in columns \n",
-    "annual_temp = pd.Data\n"
+    "annual_temp = pd.DataFrame()\n"
    ]
   },
   {
@@ -229,7 +229,9 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "annual_tem"
+   ]
   },
   {
    "cell_type": "markdown",
