Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -230,7 +230,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "for year, group in year_temps"
+    "for year, group in year_temps:\n",
+    "    annual_temp0y"
    ]
   },
   {
