Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -231,7 +231,7 @@
    "outputs": [],
    "source": [
     "for year, group in year_temps:\n",
-    "    annual_temp0y"
+    "    annual_temp[yr.year] = . "
    ]
   },
   {
