Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -231,7 +231,9 @@
    "outputs": [],
    "source": [
     "for year, group in year_temps:\n",
-    "    annual_temp[yr.year] = . "
+    "    annual_temp[yr.year] = group.values.ravel()\n",
+    "    \n",
+    "temp"
    ]
   },
   {
