Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -233,7 +233,7 @@
     "for year, group in year_temps:\n",
     "    annual_temp[yr.year] = group.values.ravel()\n",
     "    \n",
-    "temp"
+    "temp.annual.plot(figsize=())"
    ]
   },
   {
