--- a/index.ipynb
+++ b/index.ipynb
@@ -233,7 +233,8 @@
     "for year, group in year_temps:\n",
     "    annual_temp[yr.year] = group.values.ravel()\n",
     "    \n",
-    "temp.annual.plot(figsize=(22, 15), subplots=True, leg)"
+    "temp.annual.plot(figsize=(22, 15), subplots=True, legend=True)\n",
+    "plt.show()"
    ]
   },
   {
