Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -245,7 +245,7 @@
     "for year, group in year_temps:\n",
     "    annual_temp[year.year] = group.values.ravel()\n",
     "    \n",
-    "temp.annual.plot(figsize=(22, 15), subplots=True, legend=True)\n",
+    "t.plot(figsize=(22, 15), subplots=True, legend=True)\n",
     "plt.show();"
    ]
   },
