--- a/index.ipynb
+++ b/index.ipynb
@@ -265,7 +265,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Plot overlapping yearly groups \n"
+    "# Plot overlapping yearly groups \n",
+    "annual_temps"
    ]
   },
   {
