Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -266,7 +266,7 @@
    "outputs": [],
    "source": [
     "# Plot overlapping yearly groups \n",
-    "annual_temps"
+    "annual_temp.plot(figsize=(18, 10), subplots=False, legend=True)"
    ]
   },
   {
